# phoenix_utils

./: Cargo.toml  README.md
src/: commands.rs  main.rs  phoenix_encoding.rs  reset_device.rs  sci_frame_protocol.rs  storage.rs  swion_result.rs  tasks.rs  types.rs
src/cli/: commands.rs  mod.rs  types.rs
src/phoenix/: commands.rs  mod.rs  raw_serial_protocol.rs  sci_frame_protocol.rs  swion_result.rs  tasks.rs  types.rs  update_frame_protocol.rs
src/phoenix/commands/: boot.rs  device_reset.rs  feature_flags.rs  lock_key.rs  mod.rs  storage.rs  sys.rs  time.rs  tools.rs  update.rs
